--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^1.3.0",
     "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.2.0",
     "react-moment": "^0.9.7",
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.2.0",
