--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "react-icons": "^4.2.0",
     "react-moment": "^0.9.7",
     "react-number-format": "^4.4.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start --host 0.0.0.0",
